tests/golden/examples/hello_uart/expected.err
Error: unexpected token
   ╭─[ examples/hello_uart.k65:8:8 ]
   │
 8 │     { a&?UART_READY } n-?   // Wait until UART is ready (but 7 - TX FIFO not full)
   │        ┬  
   │        ╰── primary location
   │ 
   │ Help: remove or fix this token
───╯

Error: unexpected token
   ╭─[ examples/hello_uart.k65:8:9 ]
   │
 8 │     { a&?UART_READY } n-?   // Wait until UART is ready (but 7 - TX FIFO not full)
   │         ┬  
   │         ╰── primary location
   │ 
   │ Help: remove or fix this token
───╯

Error: unexpected token
   ╭─[ examples/hello_uart.k65:8:24 ]
   │
 8 │     { a&?UART_READY } n-?   // Wait until UART is ready (but 7 - TX FIFO not full)
   │                        ┬  
   │                        ╰── primary location
   │ 
   │ Help: remove or fix this token
───╯

Error: unexpected token
   ╭─[ examples/hello_uart.k65:8:25 ]
   │
 8 │     { a&?UART_READY } n-?   // Wait until UART is ready (but 7 - TX FIFO not full)
   │                         ┬  
   │                         ╰── primary location
   │ 
   │ Help: remove or fix this token
───╯

Error: unexpected token
    ╭─[ examples/hello_uart.k65:10:6 ]
    │
 10 │     x++
    │      ┬  
    │      ╰── primary location
    │ 
    │ Help: remove or fix this token
────╯

Error: unexpected token
    ╭─[ examples/hello_uart.k65:10:7 ]
    │
 10 │     x++
    │       ┬  
    │       ╰── primary location
    │ 
    │ Help: remove or fix this token
────╯

Error: unexpected token
    ╭─[ examples/hello_uart.k65:11:6 ]
    │
 11 │   } a?0 !=
    │      ┬  
    │      ╰── primary location
    │ 
    │ Help: remove or fix this token
────╯

Error: unexpected token
    ╭─[ examples/hello_uart.k65:11:9 ]
    │
 11 │   } a?0 !=
    │         ┬  
    │         ╰── primary location
    │ 
    │ Help: remove or fix this token
────╯
